--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -1,19 +1,19 @@
-<div class="header-container forPrint" id="toprint-header">
-  <div class="mobile-header" *ngIf="hideOnMobileView()">
+<div class="header-container forPrint" [ngClass]="{mobile: isMobileView()}" id="toprint-header">
+  <div class="mobile-header" *ngIf="isMobileView()">
     <span class="material-icons" (click)="backToMap()">arrow_back</span>
     <span>Wildfire</span>
     <span class="material-icons" (click)="shareContent()">share</span>
   </div>
-  <div id="map" class="map-container-mobile" *ngIf="hideOnMobileView()">
+  <div id="map" class="map-container-mobile" *ngIf="isMobileView()">
   </div>
   <div class="incident-details">
     <div class="header">
     </div>
     <div class="title-bar">
-      <div class="title">{{incident.incidentName}} <span *ngIf="incident.fireOfNoteInd && !hideOnMobileView()" #el class="fire-icon-container"><img class="icon" height="24" width="24" src="/assets/images/local_fire_department.png" alt="local_fire_department"></span> <span #el *ngIf="!hideOnMobileView()" class="no-print" style="cursor: pointer;" (click)="onWatchlist() ? removeFromWatchlist() : addToWatchlist()"><mat-icon style="color:#1A5A96">{{onWatchlist() ? 'bookmark' : 'bookmark_border'}}</mat-icon></span></div>
-      <div *ngIf="!hideOnMobileView()" class="subtitle"><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres" rel="noopener" target="_blank">{{convertToFireCentreDescription(this.incident.fireCentreName || incident.fireCentre || incident.fireCentreCode)}}</a></div>
+      <div class="title">{{incident.incidentName}} <span *ngIf="incident.fireOfNoteInd && !isMobileView()" #el class="fire-icon-container"><img class="icon" height="24" width="24" src="/assets/images/local_fire_department.png" alt="local_fire_department"></span> <span #el *ngIf="!isMobileView()" class="no-print" style="cursor: pointer;" (click)="onWatchlist() ? removeFromWatchlist() : addToWatchlist()"><mat-icon style="color:#1A5A96">{{onWatchlist() ? 'bookmark' : 'bookmark_border'}}</mat-icon></span></div>
+      <div *ngIf="!isMobileView()" class="subtitle"><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres" rel="noopener" target="_blank">{{convertToFireCentreDescription(this.incident.fireCentreName || incident.fireCentre || incident.fireCentreCode)}}</a></div>
     </div>
-    <div *ngIf="!hideOnMobileView()">
+    <div *ngIf="!isMobileView()">
       <div class="info-panel">
         <div><span class="label">Fire Number: </span><span>{{convertFireNumber(incident)}}</span></div>
         <div><span class="label">Last Updated: </span><span>{{incident.lastUpdatedTimestamp}}</span></div>
@@ -41,7 +41,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="hideOnMobileView()">
+    <div *ngIf="isMobileView()">
         <div>
           <div class="mobile-label"> Fire Number <span>{{convertFireNumber(incident)}}</span></div>
           <div class="mobile-label"> Discovered on <span>{{convertoToMobileFormate(incident.discoveryDate)}}</span></div>
@@ -65,8 +65,8 @@
       <div class="divider"></div>
     </div>
   </div>
-  <div id="map" class="map-container" *ngIf="!hideOnMobileView()">
+  <div id="map" class="map-container" *ngIf="!isMobileView()">
   </div>
 </div>
 
-<sticky-widget *ngIf="!hideOnMobileView()"></sticky-widget>
+<sticky-widget *ngIf="!isMobileView()"></sticky-widget>
