--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -14,7 +14,13 @@
 }
 
 .header-container {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
   padding: 22px;
+}
+.header-container.mobile {
+  display: block;
 }
 .header-container> * {
   flex: 1 1 350px;
