Use same code/data for all media, images and videos tabs

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div #loadMoreButton class="load-more-row" *ngIf="displayLoadMore">
-    <button mat-button class="load-more-button"(click)="loadMore(loadMoreButton)">Load More</button>
+    <button mat-button class="load-more-button"(click)="loadMoreMedia(loadMoreButton)">Load More</button>
   </div>
 </div>
   <ng-template #showDisclaimer>
