Fix button widths

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -68,13 +68,13 @@
 
       <div class="header-content">
         <div class="item">
-          <button mat-button class="mobile-button">
+          <button mat-button class="mobile-button fixed-width">
             <span class="material-icons-outlined">notifications_active</span>
             Notifications On
           </button>
         </div>
         <div class="item">
-          <button mat-button class="mobile-button" (click)="openContactUsWindow()">
+          <button mat-button class="mobile-button fixed-width" (click)="openContactUsWindow()">
             Contact Us
           </button>
         </div>
