--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -171,6 +171,10 @@
       margin-right: 24px;
       min-width: 130px;
       height: 48px;
+
+      &.fixed-width {
+        width: 170px;
+      }
     }
   }
 }
