--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -75,6 +75,7 @@
         </div>
         <div class="item">
           <button mat-button class="mobile-button fixed-width" (click)="openContactUsWindow()">
+            <mat-icon svgIcon="contact-us"></mat-icon>
             Contact Us
           </button>
         </div>
