--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -166,6 +166,7 @@
       border-radius: 5px;
       border: 1px solid #6e6e6e;
       background-color: #fdfdfd;
+      color: #333333;
       box-sizing: border-box;
       align-items: center;
       justify-content: center;
