WFNEWS-1208 : Adjust default behavior (#792)
* WFNEWS-1208 : Fix cause dropdown load

* Sonarcloud fixes

* WFNEWS-1208: tweak default behavior

* Sneaky text change

---------

Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
@@ -35,7 +35,7 @@
                     <div *ngIf="incident.wildfireAviationResourceInd">
                         <img class="image-size" src="../../../assets/images/svg-icons/aviation-mobile.svg"
                             alt="Aviation" height="36" width="36" />
-                        Aviation Crews
+                        Aviation
                     </div>
                     <div *ngIf="incident.incidentMgmtCrewRsrcInd">
                         <img class="image-size"
