Handle area restriction banners and some style fix

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
@@ -1,6 +1,6 @@
 <div class="panel">
     <div class="warning-card" *ngFor="let evac of evacOrders" (click)="navigateToEvac(evac)">
-        <alert-order-banner [evac]="evac" />
+        <alert-order-banner [evacuation]="evac" />
     </div>
 
     <div class="content-panel">
@@ -149,7 +149,7 @@
                     There are no current evacuation orders or alerts associated with this incident.</div>
                 <ng-template #displayEvacOrders>
                     <div *ngFor="let evac of evacOrders">
-                        <alert-order-banner [card]="true" [evac]="evac" />
+                        <alert-order-banner [isCard]="true" [evacuation]="evac" />
                     </div>
                     <div class="sub-title">
                         <h4>What is an Evacuation Order?</h4>
@@ -168,12 +168,9 @@
                     *ngIf="!areaRestrictions || areaRestrictions.length <= 0 ; else displayAreaRestrictions">There are
                     no current area restrictions near this incident.</div>
                 <ng-template #displayAreaRestrictions>
-                    <div class="evac-order-card" *ngFor="let area of areaRestrictions"
+                    <div *ngFor="let area of areaRestrictions"
                         (click)="navigateToAreaRestriction(area)">
-                        <span class="container">
-                            <span class="material-icons">error</span>
-                            <span> Area Restriction: {{area.eventName}}</span>
-                        </span>
+                        <alert-order-banner [isCard]="true" [areaRestriction]="area" />
                     </div>
                     <div class="sub-title">
                         <h4>What is an Area Restrictions?</h4>
@@ -227,7 +224,7 @@
                             <span>
                                 <img class="image-size" src="../../../assets/images/svg-icons/aviation-mobile.svg"
                                     alt="Wildfire Crews" />
-                                <h4>Wildfire Aviation</h4>
+                                <h4>Aviation</h4>
                             </span>
                             <div class="sub-content">
                                 <div>{{incident.wildfireAviationResourceDetail}}</div>
@@ -243,7 +240,7 @@
                                 <img class="image-size"
                                     src="../../../assets/images/svg-icons/incident-management-teams-mobile.svg"
                                     alt="Wildfire Crews" />
-                                <h4>Incident Management Team</h4>
+                                <h4>Incident Management Teams</h4>
                             </span>
                             <div class="sub-content">
                                 <div>{{incident.incidentMgmtCrewRsrcDetail}}</div>
@@ -277,7 +274,7 @@
                                 <img class="image-size"
                                     src="../../../assets/images/svg-icons/structure-protection-mobile.svg"
                                     alt="Wildfire Crews" />
-                                <h4>Structure Protection</h4>
+                                <h4>Structure Protection Units</h4>
                             </span>
                             <div class="sub-content">
                                 <div>{{incident.structureProtectionRsrcDetail}}</div>
