--- a/client/wfnews-war/src/main/angular/src/app/components/common/alert-order-banner/alert-order-banner.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/alert-order-banner/alert-order-banner.component.html
@@ -1,4 +1,4 @@
-<span [ngClass]="{'red': isOrder(), 'yellow': !isOrder(), 'banner': !card, 'card': card}">
-    <span class="material-icons">{{isOrder() ? 'error' : 'warning'}}</span>
-    <span>Evacuation {{isOrder() ? 'Order' : 'Alert'}}: {{evac.eventName}} issued by {{evac.issuingAgency}}</span>
+<span [ngClass]="[color(), shape()]">
+    <span class="material-icons">{{icon()}}</span>
+    <span>{{message()}}</span>
 </span>
