--- a/client/wfnews-war/src/main/angular/src/app/components/common/alert-order-banner/alert-order-banner.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/alert-order-banner/alert-order-banner.component.scss
@@ -1,12 +1,12 @@
 .banner {
     padding: 10px;
     display: flex;
-    align-items: center;
     font-size: 16px;
 
     span {
         padding-left: 8px;
         text-align: left;
+        line-height: 24px;
     }
 }
 
@@ -17,11 +17,11 @@
     margin-bottom: 16px;
     padding: 10px;
     display: flex;
-    align-items: center;
 
     span {
         padding-left: 8px;
         text-align: left;
+        line-height: 24px;
     }
 }
 
