--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.scss
@@ -18,3 +18,14 @@
     padding-bottom: 20px;
     padding-left: 5px;
 }
+
+.gallery-panel {
+    height: 250px;
+    width: 400px;
+}
+
+.img-responsive {
+    height: 250px;
+    width: 400px;
+    object-fit: cover;
+}
