--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -633,3 +633,10 @@ wf-admin-incident-desktop{
   color:red;
   font-weight: 400;
 }
+
+.contact-us-dialog {
+  display: block;
+  overflow: hidden;
+  border-radius: 20px !important;
+  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+}
