--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/contact-us-dialog/contact-us-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/contact-us-dialog/contact-us-dialog.component.scss
@@ -1,42 +1,74 @@
-.publish-dialog-content {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
-    .fire-centre{
-        font-size: 18px;
-        color:#242424;
-        padding: 0px 16px 0px 16px;
-
-    }
-    .contacts{
-        padding: 24px 16px 0px 16px;
-        color:#333333;
-        font-size: 16px;
-    }
-    .mobile-button{
-        border-radius: 5px;
-        border: 1px solid #6e6e6e;
-        background-color: #fdfdfd;
+.contact-us-container {
+    .header {
+        height: 48px;
+        padding: 2px;
+        background-color: #f2f2f2;
         box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+
+        h1 {
+            color: #333333;
+            background-color: rgba(255, 255, 255, 0);
+            font-size: 22px;
+            line-height: 33px;
+            font-weight: 500;
+            display: flex;
+            justify-content: space-between;
+            padding: 8px;
+            padding-left: 16px;
+            margin: 0px;
+        }
     }
-    .buttons-row{
-        padding: 24px 16px 0px 16px;
-        display: flex;
-        justify-content: space-between
+
+    .content {
+        padding: 16px;
+        overflow: hidden;
+
+        .fire-centre {
+            font-size: 18px;
+            color: #242424;
+            padding-bottom: 24px;
+            line-height: 27px;
+        }
+
+        .contact-method {
+            color: #333333;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 500;
+            padding-bottom: 24px;
+
+            .icon-label {
+                display: flex;
+                padding-bottom: 8px;
+                .icon {
+                    padding-right: 10px;
+                }
+            }
+
+            .value {
+                display: block;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+
+        .mobile-button {
+            border-radius: 5px;
+            border: 1px solid #6e6e6e;
+            background-color: #fdfdfd;
+            color: #333333;
+            box-sizing: border-box;
+            align-items: center;
+            justify-content: center;
+            min-width: 130px;
+            width: 47%;
+            height: 48px;
+        }
+
+        .buttons-row {
+            display: flex;
+            justify-content: space-between
+        }
     }
-
-}
-
-h1 {
-    color: #333333;
-    background-color: #f2f2f2;
-    font-size: 22px;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 22px;
-}
-
-::ng-deep .mat-dialog-container{
-    border-radius: 20px !important;
 }
