--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel-mobile/incident-maps-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel-mobile/incident-maps-panel-mobile.component.html
@@ -17,7 +17,7 @@
                         </div>
                     </div>
                     <div class="load-more-row" style="display: flex; justify-content: center; padding-top: 32px;">
-                        <button mat-button class="load-more-button" (click)="loadMore()" [disabled]="maps.length <= limit">
+                        <button *ngIf="maps.length > limit" mat-button class="load-more-button" (click)="loadMore()" [disabled]="maps.length <= limit">
                             <span style="font-size: 16px;">
                                 Load More
                             </span>
