--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.scss
@@ -1,5 +1,5 @@
 .title-row {
-    width: 182px;
+    width: 100%;
     height: 24px;
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
     font-weight: 500;
