--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
@@ -1,5 +1,5 @@
 .title-row {
-    width: 182px;
+    width: 100%;
     height: 24px;
     background-color: rgba(255, 255, 255, 0);
     box-sizing: border-box;
