--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.scss
@@ -1,5 +1,5 @@
 .title-row {
-    width: 182px;
+    width: 100%;
     height: 24px;
     background-color: rgba(255, 255, 255, 0);
     box-sizing: border-box;
@@ -23,7 +23,6 @@
 .media {
     padding-bottom: 20px;
     padding-top: 20px;
-    width:100;
 }
 
 .load-more-row{
@@ -41,4 +40,8 @@
 
 .disclaimer {
     margin-top: 20px;
+}
+
+.divider {
+  border-bottom: 1px solid #cccccc;
 }
