--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.html
@@ -8,7 +8,7 @@
             class="gallery-item"
             [href]="item.href"
             style="padding: 5px;">
-            <img [id]="i + '-img-thumb'" width="150" alt="Image" class="img-responsive" [src]="item.thumbnail"/>
+            <img [id]="i + '-img-thumb'" alt="Image" class="img-responsive" style="width: 100%;" [src]="item.thumbnail"/>
         </a>
     </lightgallery>
 
