--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/video-panel/video-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/video-panel/video-panel.component.html
@@ -6,5 +6,5 @@
     suggestedQuality="highres"
     [startSeconds]="1"
     [height]="250"
-    [width]="400">
+    width="100%">
 </youtube-player>
