Map attributes to source object

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.html
@@ -3,7 +3,7 @@
   {{ message }}
 
   <textarea matInput rows="3" style="height:auto;"
-    [(ngModel)]="reportOfFire.otherInfo"
+    [(ngModel)]="reportOfFire[updateAttribute]"
     placeholder="Enter additional details here">
   </textarea>
 
