--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
@@ -3,7 +3,7 @@
   {{ message }}
 
   <div *ngFor="let button of buttons">
-    <mat-button-toggle *ngIf="allowMultiSelect" (change)="onValChange(value)" [value]="button.value"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</mat-button-toggle>
+    <mat-button-toggle *ngIf="allowMultiSelect" (change)="onValChange(button.value)" [value]="button.value"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</mat-button-toggle>
     <button mat-flat-button *ngIf="!allowMultiSelect" (click)="onValChange(button.value)"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</button>
   </div>
 
@@ -11,6 +11,6 @@
 
   <div>
     <button mat-raised-button (click)="previous()">Previous</button>
-	  <button mat-raised-button (click)="next()">Next</button>
+	  <button mat-raised-button color="primary" (click)="next()">Next</button>
   </div>
 </div>
