--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/permissions-page/rof-permissions-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/permissions-page/rof-permissions-page.component.html
@@ -4,6 +4,6 @@
 
   <div>
     <button mat-raised-button>Cancel</button>
-	  <button mat-raised-button (click)="next()">Continue</button>
+	  <button mat-raised-button color="primary" (click)="next()">Continue</button>
   </div>
 </div>
