--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/simple-question-page/rof-simple-question-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/simple-question-page/rof-simple-question-page.component.html
@@ -10,7 +10,7 @@
 
   <div>
     <button mat-raised-button (click)="previous()">Previous</button>
-	  <button mat-raised-button (click)="questionOptions.value === 'yes' ? next() : skip()">Next</button>
+	  <button mat-raised-button (click)="questionOptions.value === 'yes' ? next() : skip()" color="primary">Next</button>
   </div>
 
 </div>
