Object updates, cleanup

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
@@ -6,7 +6,7 @@
   <input matInput type="text" [(ngModel)]="reportOfFire.phoneNumber">
 
   <div>
-    <button mat-raised-button (click)="reportOfFire.consentToCall = false; previous();">Previous</button>
-	  <button mat-raised-button (click)="reportOfFire.consentToCall = true; next();">Continue</button>
+    <button mat-flat-button (click)="reportOfFire.consentToCall = false; previous();">Previous</button>
+	  <button mat-flat-button color="primary" (click)="reportOfFire.consentToCall = true; next();">Continue</button>
   </div>
 </div>
