--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.html
@@ -8,7 +8,7 @@
   </textarea>
 
   <div>
-    <button mat-raised-button (click)="previous()">Previous</button>
-	  <button mat-raised-button (click)="next()">Review</button>
+    <button mat-flat-button (click)="previous()">Previous</button>
+	  <button mat-flat-button color="primary" (click)="next()">Review</button>
   </div>
 </div>
