--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
@@ -7,10 +7,10 @@
     <button mat-flat-button *ngIf="!allowMultiSelect" (click)="onValChange(button.value)"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</button>
   </div>
 
-  <mat-button-toggle *ngIf="allowIDontKnowButton" value="skip"><mat-icon>question</mat-icon>I don't Know</mat-button-toggle>
+  <mat-button-toggle *ngIf="allowIDontKnowButton" value="skip" (click)="onValChange(null)"><mat-icon>question</mat-icon>I don't Know</mat-button-toggle>
 
   <div>
-    <button mat-raised-button (click)="previous()">Previous</button>
-	  <button mat-raised-button color="primary" (click)="next()">Next</button>
+    <button mat-flat-button (click)="previous()">Previous</button>
+	  <button [disabled]="disableNext" mat-flat-button color="primary" (click)="next()">Next</button>
   </div>
 </div>
