--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/location-page/rof-location-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/location-page/rof-location-page.component.html
@@ -2,7 +2,7 @@
   {{ title }}
   {{ message }}
   <div>
-    <button mat-raised-button (click)="previous()">Previous</button>
-	  <button mat-raised-button (click)="next()">Continue</button>
+    <button mat-flat-button (click)="previous()">Previous</button>
+	  <button mat-flat-button color="primary" (click)="next()">Continue</button>
   </div>
 </div>
