--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
@@ -6,7 +6,7 @@
 
   <div *ngIf="!closeButton">
     <button mat-flat-button (click)="openCallPage()">Call</button>
-	  <button mat-raised-button color="primary" (click)="next()">Start</button>
+	  <button mat-flat-button color="primary" (click)="next()">Start</button>
   </div>
   <div *ngIf="closeButton">
     <button mat-flat-button (click)="close()">Close</button>
