--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
@@ -1,9 +1,7 @@
 <div>
   <div>{{ title }}</div>
+  <img alt="Report of Fire Banner" [src]="imageUrl" height="248px" />
   <div>{{ message }}</div>
-
-  {{ imageUrl }}
-
   <div *ngIf="!closeButton">
     <button mat-flat-button (click)="openCallPage()">Call</button>
 	  <button mat-flat-button color="primary" (click)="next()">Start</button>
