--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.html
@@ -4,6 +4,13 @@
     <span>Report A Fire</span>
     <span><span *ngIf="allowSkip" (click)="skip()">Skip</span></span>
   </div>
-  <div #dynamic id="page-container" class="page-container">
+  <div #dynamic class="page-container">
+  </div>
+  <div class="wrapper" *ngIf="showProgress">
+    <ol class="ProgressBar">
+      <li class="ProgressBar-step" *ngFor="let step of progressSteps; let i = index;">
+        <svg class="ProgressBar-icon" [style]="i < currentStep ? 'background-color: #123262' : ''"></svg>
+      </li>
+    </ol>
   </div>
 </div>
