--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -24,3 +24,34 @@
     color:black !important
   }
 }
+
+.wrapper {
+  max-width: 450px;
+}
+
+.ProgressBar {
+  margin: 0 auto;
+  padding: 2em 0 3em;
+  list-style: none;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ProgressBar-step {
+  text-align: center;
+  position: relative;
+  width: 100%;
+
+  .ProgressBar-icon {
+    width: 0.25em;
+    height: 0.25em;
+    background-color: #737373;
+    border-radius: 50%;
+    padding: 0.5em;
+    max-width: 100%;
+    z-index: 10;
+    position: relative;
+    transition: all .25s ease-out;
+  }
+}
