Add permissions page content

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/permissions-page/rof-permissions-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/permissions-page/rof-permissions-page.component.html
@@ -2,8 +2,11 @@
   {{ title }}
   {{ message }}
 
+  <div class="divider"></div>
+  <h3>Do you agree to share information with the BC Wildfire Service?</h3>
+  <mat-checkbox [checked]="dataShareAccepted" (change)="dataShareAcceptedToggle($event.checked)">I agree to share information provided in this report with BC Wildfire Service</mat-checkbox>
   <div>
-    <button mat-flat-button>Cancel</button>
-	  <button mat-flat-button color="primary" (click)="next()">Continue</button>
+    <button mat-flat-button (click)="close()">Cancel</button>
+	  <button mat-flat-button color="primary" (click)="next()" [disabled]="!dataShareAccepted">Continue</button>
   </div>
 </div>
